--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,7 @@
+env AUTH;
+
+include /etc/nginx/modules/*.conf;
+
 error_log stderr warn;
 
 events {
@@ -7,13 +11,15 @@ events {
 http {
     proxy_cache_path /data/nginx/cache levels=1:2 keys_zone=STATIC:10m inactive=24h max_size=1g;
     server {
+        set_by_lua $AUTH 'return os.getenv("AUTH")';
+
         listen 80;
         location / {
             proxy_pass https://api.github.com/;
             proxy_set_header Host api.github.com;
             proxy_set_header Accept application/vnd.github.v3+json;
             proxy_set_header User-Agent nginx-proxy;
-            proxy_set_header Authorization !AUTH;
+            proxy_set_header Authorization "${AUTH}";
             proxy_cache STATIC;
             proxy_cache_valid 200  1d;
         }
